# Xipher-Desctop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc.in  build.bat
.github/workflows/: release.yml
docs/: SIGNING.md
installer/: build-installer.sh  xipher.iss
packaging/: AppxManifest.xml  build-msix.ps1
resources/: resources.qrc
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/net/: ApiClient.cpp  ApiClient.h  CallController.cpp  CallController.h  CallEngine.cpp  CallEngine.h  Models.h  Prefs.h  Session.cpp  Session.h  VoiceRecorder.cpp  VoiceRecorder.h  WsClient.cpp  WsClient.h
src/ui/: AnimatedEmojiLabel.cpp  AnimatedEmojiLabel.h  AuthUi.h  AvatarUtil.cpp  AvatarUtil.h  BackgroundWidget.cpp  BackgroundWidget.h  CallOverlay.cpp  CallOverlay.h  ChatPage.cpp  ChatPage.h  ChatPickerDialog.cpp  ChatPickerDialog.h  Checklist.cpp  Checklist.h  ComposerEdit.cpp  ComposerEdit.h  ContactsPanel.cpp  ContactsPanel.h  EmojiPicker.cpp  EmojiPicker.h  EmptyChatGreeting.cpp  EmptyChatGreeting.h  FolderDialog.cpp  FolderDialog.h  GroupChannelDialogs.cpp  GroupChannelDialogs.h  HomePage.cpp  HomePage.h  Icons.h  ImageViewer.cpp  ImageViewer.h  LoginPage.cpp  LoginPage.h  ModalOverlay.cpp  ModalOverlay.h  NewChatDialog.cpp  NewChatDialog.h  PeerInfoPanel.cpp  PeerInfoPanel.h  (+13 more)
